assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Signika:wght@300;400;500;600;700&display=swap');


/*colors used
primary color white = #fdfdfd;

secondary color black = #2e3029;

accent color blue = #326273;

accent color green = #729b79;

hover link color = #9b9b9b;
*/

/*----GENERAL PAGE----*/

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

.row {
    margin-right: auto;
    margin-left: auto;
}

body {
    font-family: "Signika", sans-serif;
}

.section-break {
    background-color: #2e3029;
    width: 300px;
    height: 3px;
    margin: 70px auto 0 auto;
    border-radius: 20px;
}

.arrow__icon i {
    color: #2e3029;
    margin: 120px auto 0 auto;
    font-size: 2rem;
}

/*----PADDINGS,MARKINGS,TEXT----*/

.container-fluid {
    padding: 0;
}



/*----COLORS----*/





/*----NAV----*/

#logo {
    font-size: 2em;
    font-weight: 600;
    color: #2e3029;
    display: inline-block;
}

.nav {
    transition: 0.3s all ease;
    width: 260px;
    height: 100%;
    background: rgba(229,229,229,0.5);
    z-index: 9999;
}

.nav__icon {
    font-size: 30px;
    border: none;
    cursor: pointer;
    
}

.menu {
  list-style-type: none;
  text-decoration: none;
}

  .menu__item {
    font-size: 1.4rem;
    color: #2e3029;
    padding: 1.2rem;
    transition: 0.3s all ease;
    text-align: left;
  }
  .menu__item:hover {
    background: #fdfdfd;
    cursor: pointer;
  }

  a {
    text-decoration: none;
    list-style-type: none;
    color: #2e3029;
  }

  a:visited {
      color: #2e3029;
  }

  a:hover {
      color: #9b9b9b;
      text-decoration: none;
      list-style-type: none;
      transition: 0.3s all ease;
  }

  /**** hamburger icon ****/


/*----HERO CONTENT----*/

.hero__background {
    position: relative;
    width: 310px;
    height: 210px;
    background-color: #326273;
    border-radius: 40px;
    margin-top: 150px;
    margin-left: auto;
    margin-right: auto;
}

.hero__text {
    position: absolute;
    left: 20px;
    right: 20px;
    bottom: 0;
    top: 40px;
}

.text__line__1 {
    color: #2e3029;
    text-align: center;
    font-size: 2rem;
    line-height: 1;
}

.ivan__hero {
    font-weight: 600;
}

.text__line__2 {
    color: #fdfdfd;
    text-align: center;
    font-size: 2rem;
    line-height: 1;
}

.text__line__3 {
    color: #2e3029;
    text-align: center;
    font-size: 2rem;
    line-height: 1;
}

.available__header {
    margin-top: 30px;
    text-align: center;
}

.available__text {
    font-size: 1rem;
    display: inline-block;

}

.available__dot {
    display: inline-block;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: #729b79;
}

.work__btn {
    background-color: #729b79;
    border-radius: 40px;
    color: #fdfdfd;
    margin-top: 20px;
}


/*----ABOUT ----*/

.about__title {
    color: #2e3029;
    font-size: 2rem;
    font-weight: 600;
    margin-top: 55px;
}

.dark-background {
    background-color: #2e3029;
    height: 500px;
    margin-top: 30px;
}

.about__img {
    width: 330px; 
    margin-top: 130px;
}

.about-main-text {
    width: 300px;
    margin: 30px auto 0 auto;
    color: #fdfdfd;
}

.trait__headers {
    margin-top: 70px;
}

.formal__header {
    color: #fdfdfd;
    display: inline-block;
    margin-right: 70px;
}

.informal__header {
    color: #fdfdfd;
    display: inline-block;
    margin-left: 70px;
    margin-top: 
}

.trait__list {
    margin-top: 15px;
}

.formal__list {
    color: #fdfdfd;
    display: inline-block;
    margin-right: 60px;
    list-style-type: none;
}

.vert-line {
    border-left: 3px solid #fdfdfd;
    height: 150px;
    display: inline-block;
    border-radius: 50px;
}

.informal__list {
    color: #fdfdfd;
    display: inline-block;
    margin-left: 60px;
    list-style-type: none;

}


/*----SKILLS----*/

.skills__header {
    color: #2e3029;
    font-size: 2rem;
    font-weight: 600;
    margin-top: 85px;
}

.front-end-section {
    margin-top: 70px;
}

.icon__skills {
    color: #326273;
    font-size: 30px;
}

.title__skills {
    color: #2e3029;
}

.skill__list {
    margin-top: 15px;
}

.front1__list {
    color: #2e3029;
    display: inline-block;
    margin-right: 60px;
    list-style-type: none;
}

.skills-vert-line {
    border-left: 3px solid #2e3029;
    height: 60px;
    display: inline-block;
    border-radius: 50px;
    margin-bottom: 10px;
}

.front2__list {
    color: #2e3029;
    display: inline-block;
    margin-left: 60px;
    list-style-type: none;

}

.skills-hor-break {
    background-color: #2e3029;
    width: 300px;
    height: 3px;
    margin: 10px auto 0 auto;
    border-radius: 20px;
}

.back-end-section {
    margin-top: 30px;
}

.icon__skills {
    color: #326273;
    font-size: 30px;
}

.title__skills {
    color: #2e3029;
}

.skill__list {
    margin-top: 15px;
}

.back1__list {
    color: #2e3029;
    display: inline-block;
    margin-right: 60px;
    list-style-type: none;
}

.skills-vert-line {
    border-left: 3px solid #2e3029;
    height: 60px;
    display: inline-block;
    border-radius: 50px;
    margin-bottom: 10px;
}

.back2__list {
    color: #2e3029;
    display: inline-block;
    margin-left: 60px;
    list-style-type: none;

}

.skills-hor-break {
    background-color: #2e3029;
    width: 300px;
    height: 3px;
    margin: 10px auto 0 auto;
    border-radius: 20px;
}

.tools-section {
    margin-top: 30px;
}

.icon__skills {
    color: #326273;
    font-size: 30px;
}

.title__skills {
    color: #2e3029;
}

.skill__list {
    margin-top: 15px;
}

.tools1__list {
    color: #2e3029;
    display: inline-block;
    margin-right: 60px;
    list-style-type: none;
}

.skills-vert-line {
    border-left: 3px solid #2e3029;
    height: 60px;
    display: inline-block;
    border-radius: 50px;
    margin-bottom: 10px;
}

.tools2__list {
    color: #2e3029;
    display: inline-block;
    margin-left: 60px;
    list-style-type: none;

}

/*----WORK----*/

.work__header {
    color: #2e3029;
    font-size: 2rem;
    font-weight: 600;
    margin-top: 85px;
}

.background__image {
    background: rgb(46,48,41);
background: linear-gradient(0deg, rgba(46,48,41,1) 0%, rgba(46,48,41,1) 30%, rgba(253,253,253,1) 30%, rgba(255,255,255,1) 30%);
}

.project__img {
    width: 290px; 
    margin-top: 60px;
}

.project__background {
    background-color: #2e3029;
    height: 370px;
    margin-top: 0px;
    z-index: 0;
}

.project__name {
    color: #fdfdfd;
    margin-top: 15px;
}

.languages {
    color: #fdfdfd;
}

.project__description {
    color: #fdfdfd;
    width: 300px;
    margin: 0 auto;
}

.visit__btn {
    background-color: #729b79;
    border-radius: 40px;
    color: #fdfdfd;
    margin-top: 20px;
    font-size: 20px;
}

/*----CONTACT----*/

.contact__header {
    color: #2e3029;
    font-size: 2rem;
    font-weight: 600;
    margin-top: 85px;
}

.talk__title {
    font-size: 1.5rem;
    margin-top: 40px;
}

.phone__line {
    margin-top: 20px;
}

.phone__label {
    display: inline-block;
    margin-right: 13px;
}

.phone__data {
    display: inline-block;
    margin-left: 13px;
}

.email__line {
    
}

.email__label {
    display: inline-block;
    margin-right: 15px;
}

.email__data {
    display: inline-block;
    margin-left: 15px;
}

.message__title {
    font-size: 1.5rem;
    margin-top: 40px;
}

.form__content {
    margin-top: 30px;
}

.name-form-label,
.email-form-label,
.message-form-label {
    margin-left: 10px;
}

.submit__btn {
    background-color: #729b79;
    border-radius: 40px;
    color: #fdfdfd;
    margin-top: 20px;
    font-size: 20px;
}

.submit__btn:hover {
    background-color: #2f4132;
}





/*----FOOTER----*/

.footer-hor-break {
    background-color: #2e3029;
    width: 300px;
    height: 3px;
    margin: 10px auto 0 auto;
    border-radius: 20px;
    margin-top: 70px;
}

.social__icons {
    margin: 30px 0 30px 0;
}

.insta__icon {
    font-size: 30px;
    margin-right: 30px;
}

.linkedin__icon {
    font-size: 30px;
}

.github__icon {
    font-size: 30px;
    margin-left: 30px;
}

.copy__icon {
    display: inline-block;
    font-size: 8px;
}

.copy__text {
    display: inline-block;
}




/*----MEDIA QUERIES----*/

